[gd_scene load_steps=6 format=3 uid="uid://ci54r875d5sde"]

[ext_resource type="Script" path="res://src/main/scene/level/main/main.gd" id="1_eir3c"]
[ext_resource type="PackedScene" uid="uid://cjomknymi6k7e" path="res://src/main/scene/level/map/map.tscn" id="1_mxmg4"]
[ext_resource type="PackedScene" uid="uid://d1trm4x87sn3o" path="res://src/main/scene/role/base_camp/base_camp.tscn" id="2_8q5gu"]
[ext_resource type="PackedScene" uid="uid://b8vqwx4xiljh2" path="res://src/main/scene/role/building/cannon/cannon.tscn" id="4_bbq3m"]

[sub_resource type="Curve2D" id="Curve2D_xfpha"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 373, 214, 0, 0, 0, 0, 375, 879, 0, 0, 0, 0, 1550, 877, 0, 0, 0, 0, 1549, 214, 0, 0, 0, 0, 373, 214)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_eir3c")

[node name="Map" parent="." instance=ExtResource("1_mxmg4")]

[node name="BaseCamp" parent="." instance=ExtResource("2_8q5gu")]
position = Vector2(960, 525)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(960, 540)
zoom = Vector2(2, 2)

[node name="Cannon" parent="." instance=ExtResource("4_bbq3m")]
position = Vector2(865, 469)

[node name="Cannon2" parent="." instance=ExtResource("4_bbq3m")]
position = Vector2(1039, 618)

[node name="Cannon3" parent="." instance=ExtResource("4_bbq3m")]
position = Vector2(1049, 451)

[node name="Cannon4" parent="." instance=ExtResource("4_bbq3m")]
position = Vector2(878, 615)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_xfpha")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(373, 214)
rotation = 1.56779

[node name="MonsterSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="MonsterSpawnTimer" to="." method="_on_monster_spawn_timer_timeout"]
